Small fix for IEs not aligning things correctly.

--- a/app/stylesheets/design/_page.scss
+++ b/app/stylesheets/design/_page.scss
@@ -259,3 +259,7 @@ font-size: 1.4em;
 line-height: 1.5;
 text-align: right;
 }
+
+#comments-closing-opening .group {
+  clear: both;
+}
